* Added missing graphics (Bug #35090)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51410 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-8) unstable; urgency=medium
+
+  * Added missing graphics (Bug #35090)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 07:57:20 +0200
+
 univention-ad-connector (8.0.17-7) unstable; urgency=low
 
   * Don't synchronize windows computers while updating (Bug #35091)
