* UCS in AD domain update (Bug #35093)   [ Arvid Requate ]    * Support pwd_scheme_kinit (Bug #34091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51413 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,11 @@
+univention-ldap (10.0.17-37) unstable; urgency=low
+
+  * UCS in AD domain update (Bug #35093)
+    [ Arvid Requate ]
+     * Support pwd_scheme_kinit (Bug #34091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 08:41:42 +0200
+
 univention-ldap (10.0.17-36) unstable; urgency=low
 
   * New share-userquota binary attribute:
