* Depend on the current slapd version (Bug #35093)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51415 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-38) unstable; urgency=low
+
+  * Depend on the current slapd version (Bug #35093)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 08:54:05 +0200
+
 univention-ldap (10.0.17-37) unstable; urgency=low
 
   * UCS in AD domain update (Bug #35093)
