--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-39) unstable; urgency=low
+
+  * Fixed typo in control file (Bug #35093)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 08:57:24 +0200
+
 univention-ldap (10.0.17-38) unstable; urgency=low
 
   * Depend on the current slapd version (Bug #35093)
