Update to the latest kernel build (Bug #34571)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51419 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (7.0.0-12) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #34571).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 02 Jul 2014 09:33:45 +0200
+
 univention-kernel-image (7.0.0-11) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #35060).
