--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,6 +1,12 @@
+univention-quota (8.0.6-7) unstable; urgency=low
+
+  * fix typo; (Bug #31277)
+
+ -- Florian Best <best@univention.de>  Wed, 02 Jul 2014 14:30:56 +0200
+
 univention-quota (8.0.6-6) unstable; urgency=low
 
-  * fiy typo; (Bug #31277)
+  * fix typo; (Bug #31277)
 
  -- Florian Best <best@univention.de>  Tue, 01 Jul 2014 12:07:30 +0200
 
