* Bug #34092: show attributes as readonly when UCS is part of an AD domain; * merges svn r48050 r48049 r48032 r48014 r48013 r47823 r47822 r47821 r47806 r47792 r47767
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51443 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/modules/univention/admin/handlers/de.po
+++ b/management/univention-directory-manager-modules/modules/univention/admin/handlers/de.po
@@ -114,6 +114,14 @@ msgstr "DHCP"
 msgid "DNS Alias"
 msgstr "DNS-Alias"
 
+#: __init__.py:404
+msgid "Objects from Active Directory can not be moved."
+msgstr "Objekte aus Active-Directory-Domänen können nicht verschoben werden."
+
+#: __init__.py:404
+msgid "Objects from Active Directory can not be removed."
+msgstr "Objekte aus Active-Directory-Domänen können nicht gelöscht werden."
+
 #~ msgid "There is more than one DNS Forward-Zone-Entry."
 #~ msgstr "Es existiert mehr als ein Eintrag in einer DNS-Forward-Zone."
 
