--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,10 @@
+univention-pkgdb (7.0.11-5) unstable; urgency=low
+
+  * give user friend feedback whenever a command executions fails because the
+    postgreSQL server is not running (Bug #34723)
+    
+ -- Lukas Walter <walter@univention.de>  Wed, 02 Jul 2014 16:45:20 +0200
+
 univention-pkgdb (7.0.11-4) unstable; urgency=low
 
   * on module init error, raise UMC_Error (Bug #34723)
