--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-daemon (3.0.17-10) unstable; urgency=low
+
+  * Bug #35122: Automatically update the UVMM grid when clicking on the tree
+    (although uvmm/umc/autosearch is false) or when leaving details view
+    (description may have changed, snapshot may have impact on machine state)
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 02 Jul 2014 16:45:24 +0200
+
 univention-virtual-machine-manager-daemon (3.0.17-9) unstable; urgency=low
 
   * Revert the revert (Bug #34425)
