* Bug #34092: forgot to merge svn r48049
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51459 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.76-10) unstable; urgency=low
+
+  * Bug #34092: forgot to merge svn r48049
+
+ -- Florian Best <best@univention.de>  Thu, 03 Jul 2014 08:51:20 +0200
+
 univention-directory-manager-modules (9.0.76-9) unstable; urgency=low
 
   * Bug #34092: add _is_synced_object to base class
