* 5*_*connector: added more connector group membership tests   (Bug #35234)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51462 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-46) unstable; urgency=low
+
+  * 5*_*connector: added more connector group membership tests
+    (Bug #35234)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 03 Jul 2014 08:59:03 +0200
+
 ucs-test (4.0.166-45) unstable; urgency=low
 
   * Bug #35177: Made tests for app codes executable
