* Fixed python tracebacks from last merge (Bug #35090)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51464 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,4 +1,10 @@
-univention-ad-connector (8.0.17-8) unstable; urgency=medium
+univention-ad-connector (8.0.17-9) unstable; urgency=low
+
+  * Fixed python tracebacks from last merge (Bug #35090)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 03 Jul 2014 09:03:00 +0200
+
+univention-ad-connector (8.0.17-8) unstable; urgency=low
 
   * Added missing graphics (Bug #35090)
 
