--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-48) unstable; urgency=low
+
+  * The group_members_cache_con is not be filled in write mode. So we
+    have to ignore the previous AD memberships (Bug #35238)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 03 Jul 2014 10:04:11 +0200
+
 univention-s4-connector (8.0.33-47) unstable; urgency=low
 
   * Re-added diff mode changes (Bug #33621 and Bug #32263)
