--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (8.0.17-10) unstable; urgency=low
+
+  * The group_members_cache_con is not be filled in write mode. So we
+    have to ignore the previous AD memberships (Bug #35234)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 03 Jul 2014 10:03:25 +0200
+
 univention-ad-connector (8.0.17-9) unstable; urgency=low
 
   * Fixed python tracebacks from last merge (Bug #35090)
