--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (7.0.11-6) unstable; urgency=low
+
+  * fixed typo (Bug #34723)
+    
+ -- Lukas Walter <walter@univention.de>  Wed, 03 Jul 2014 12:12:10 +0200
+
 univention-pkgdb (7.0.11-5) unstable; urgency=low
 
   * give user friendly feedback whenever a command execution fails because the
