--- a/services/univention-pkgdb/umc/python/pkgdb/de.po
+++ b/services/univention-pkgdb/umc/python/pkgdb/de.po
@@ -23,7 +23,7 @@ msgstr "Nur Konfigurationsdateien"
 #: umc/python/pkgdb/__init__.py:242
 #, python-format
 msgid ""
-"Connection to the dabase lost.\n"
+"Connection to the database lost.\n"
 "\n"
 "%s"
 msgstr ""
