* Added missing graphics (Bug #35090)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51476 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-11) unstable; urgency=low
+
+  * Added missing graphics (Bug #35090)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 03 Jul 2014 12:14:02 +0200
+
 univention-ad-connector (8.0.17-10) unstable; urgency=low
 
   * The group_members_cache_con is not be filled in write mode. So we
