* Bug #34093: copy images
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51484 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-25) unstable; urgency=low
+
+  * Bug #34093: copy images
+
+ -- Florian Best <best@univention.de>  Thu, 03 Jul 2014 12:33:47 +0200
+
 univention-management-console-module-udm (4.0.97-24) unstable; urgency=low
 
   * Bug #34092: show attributes as readonly in Active Directory
