revert svn r51405 (Bug #35062)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51486 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.76-11) unstable; urgency=low
+
+  * revert svn r51405 (Bug #35062)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 03 Jul 2014 12:34:11 +0200
+
 univention-directory-manager-modules (9.0.76-10) unstable; urgency=low
 
   * Bug #34092: forgot to merge svn r48049
