* Bug #34243: only show reload-UMC message once; fix setting of category name
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51504 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-36) unstable; urgency=low
+
+  * Bug #34243: only show reload-UMC message once; fix setting of category
+  	name
+
+ -- Florian Best <best@univention.de>  Thu, 03 Jul 2014 15:21:32 +0200
+
 univention-management-console-frontend (3.0.152-35) unstable; urgency=low
 
   * fixed quoting in web server join script (Bug #33615)
