* Bug #35122: Automatically update the UVMM grid view in an defined interval
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51521 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.17-11) unstable; urgency=low
+
+  * Bug #35122: Automatically update the UVMM grid view in an defined interval
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 04 Jul 2014 12:51:12 +0200
+
 univention-virtual-machine-manager-daemon (3.0.17-10) unstable; urgency=low
 
   * Bug #35122: Automatically update the UVMM grid when clicking on the tree
