ucs-test (4.0.166-48) unstable; urgency=low
  * udm.py#stop_cli_server(): catch psutil.NoSuchProcess instead of
    psutil.error.NoSuchProcess (Bug #35220)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51522 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-48) unstable; urgency=low
+
+  * udm.py#stop_cli_server(): catch psutil.NoSuchProcess instead of
+    psutil.error.NoSuchProcess (Bug #35220)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 04 Jul 2014 12:55:14 +0200
+
 ucs-test (4.0.166-47) unstable; urgency=low
 
   * univention/testing/license_client.py: a tool to issue licenses for
