* examples/jenkins/autotest-*.cfg: copy the ~/ec2/license/license.secret     file to access the license shop from autotest envs (Bug #35205)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51523 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (0.1.20-2) unstable; urgency=low
+
+  * examples/jenkins/autotest-*.cfg: copy the ~/ec2/license/license.secret
+    file to access the license shop from autotest envs (Bug #35205)
+
+ -- Dmitry Galkin <galkin@univention.de>  Fri, 04 Jul 2014 13:00:56 +0200
+
 ucs-ec2-tools (0.1.20-1) unstable; urgency=low
 
   * Increase EC2 connection timeout (Bug #34866)
