--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.41-3) unstable; urgency=medium
+
+  * Transfer UCS component installation status in APT user agent (Bug #33807)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 04 Jul 2014 14:56:56 +0200
+
 univention-updater (9.0.41-2) unstable; urgency=low
 
   * Bug #35022: Do not register apps when only installing master packages
