Removed console-tools from dependency list otherwise the initial debootstrap fails (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51533 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,10 @@
+univention-base-files (4.0.0-3) unstable; urgency=low
+
+  * Removed console-tools from dependency list otherwise the initial
+    debootstrap fails (Bug #35138)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 04 Jul 2014 15:30:59 +0200
+
 univention-base-files (4.0.0-2) unstable; urgency=low
 
   * Set package priority to important (Bug #35138)
