--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.3-1) unstable; urgency=low
+
+  * Retry update after delete by UUID (Bug #35261)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 04 Jul 2014 14:11:12 +0200
+
 univention-directory-listener (8.0.2-2) unstable; urgency=low
 
   * Handle move to intermediate containers (Bug #34833)
