* 52_s4connector/02*concurrent_changes*: Added more concurrent changes   test cases (Bug #33621)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51540 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-49) unstable; urgency=low
+
+  * 52_s4connector/02*concurrent_changes*: Added more concurrent changes
+    test cases (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 07 Jul 2014 07:53:14 +0200
+
 ucs-test (4.0.166-48) unstable; urgency=low
 
   * udm.py#stop_cli_server(): catch psutil.NoSuchProcess instead of
