--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-49) unstable; urgency=low
+
+  * Restart bind9 if the ldap/master can't be resolved (Bug #34865)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 07 Jul 2014 08:08:29 +0200
+
 univention-s4-connector (8.0.33-48) unstable; urgency=low
 
   * The group_members_cache_con is not be filled in write mode. So we
