--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.3-1) unstable; urgency=low
+
+  * Bug #34902: Set more attributes to readonly when synced; merge svn 48069
+
+ -- Florian Best <best@univention.de>  Mon, 07 Jul 2014 13:14:29 +0200
+
 univention-directory-manager-modules (10.0.2-1) unstable; urgency=low
 
   * revert svn r51404 (Bug #35062)
