--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (7.0.0-13) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #34571).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Tue, 08 Jul 2014 07:26:28 +0200
+
 univention-kernel-image (7.0.0-12) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #34571).
