--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.98-1) unstable; urgency=low
+
+  * Bug #34093: fix recreation of CreateWizard after successful object
+  	creation
+
+ -- Florian Best <best@univention.de>  Tue, 08 Jul 2014 09:53:13 +0200
+
 univention-management-console-module-udm (4.0.97-26) unstable; urgency=low
 
   * Bug #34093: Set the adnotifcation variables in univention-join; merge svn48117
