--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (7.0.1-7) unstable; urgency=low
+
+  * rerun listener handler with listener_old (Bug #34759) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 08 Jul 2014 10:37:17 +0200
+
 univention-directory-replication (7.0.1-6) unstable; urgency=low
 
   * rerun listener handler with listener_old (Bug #34759)
