* 60_umc-system/80_umc-service-license: a test for UMC     license management (Bug #34620);   * 60_umc-system/FreeForPersonalUseTest.license: a template of     a 'Free' license for the test
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51604 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (4.0.166-52) unstable; urgency=low
+
+  * 60_umc-system/80_umc-service-license: a test for UMC
+    license management (Bug #34620);
+  * 60_umc-system/FreeForPersonalUseTest.license: a template of
+    a 'Free' license for the test
+
+ -- Dmitry Galkin <galkin@univention.de>  Tue, 08 Jul 2014 10:51:42 +0200
+
 ucs-test (4.0.166-51) unstable; urgency=low
 
   * 00_base/90change_user_pwd_via_udm: removed the app test flag. It
