udm.py#stop_cli_server(): really catch IOError (Bug #35220)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51606 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-53) unstable; urgency=low
+
+  * udm.py#stop_cli_server(): really catch IOError (Bug #35220)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 08 Jul 2014 11:25:10 +0200
+
 ucs-test (4.0.166-52) unstable; urgency=low
 
   * 60_umc-system/80_umc-service-license: a test for UMC
