proof_uniqueMembers: do not crash on empty uniqueMember attribute (Bug #33030)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51614 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-13) unstable; urgency=low
+
+  * proof_uniqueMembers: do not crash on empty uniqueMember attribute
+  (Bug #33030)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 03 Jul 2014 15:08:11 +0200
+
 univention-directory-manager-modules (9.0.76-12) unstable; urgency=low
 
   * Bug #34092: Set more attributes to readonly when synced; merge svn 48069
