fixed univention-samba4-backup (Bug #35084)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51618 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-26) unstable; urgency=low
+
+  * fixed univention-samba4-backup (Bug #35084) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 08 Jul 2014 15:50:05 +0200
+
 univention-samba4 (3.0.39-25) unstable; urgency=low
 
   * always clean up the samba dir before join
