* Bug #34244: enhance error handling to display user friendly error messages
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51625 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-16) unstable; urgency=low
+
+  * Bug #34244: enhance error handling to display user friendly error messages
+
+ -- Florian Best <best@univention.de>  Tue, 08 Jul 2014 16:40:48 +0200
+
 univention-management-console (6.0.24-15) unstable; urgency=low
 
   * Bug #34243: add parameter 'reload' to modules/list; revert dh-umc-install
