--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-38) unstable; urgency=low
+
+  * Bug #34243: only show reload-UMC message once
+
+ -- Florian Best <best@univention.de>  Wed, 09 Jul 2014 08:41:56 +0200
+
 univention-management-console-frontend (3.0.152-37) unstable; urgency=low
 
   * set response.timeout in cherrpy config to umc/http/session/timeout
