--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (8.0.6-8) unstable; urgency=low
+
+  * Fix univention-user-quota traceback if no quota is defined (Bug #33174) 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 09 Jul 2014 09:46:26 +0200
+
 univention-quota (8.0.6-7) unstable; urgency=low
 
   * fix typo; (Bug #31277)
