--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-28) unstable; urgency=medium
+
+  * Bug #34246: reverted commit r50381
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 09 Jul 2014 10:53:47 +0200
+
 univention-management-console-module-udm (4.0.97-27) unstable; urgency=low
 
   * Bug #34093: fix recreation of CreateWizard after successful object
