* Merge from UCS 3.2-2 (Bug #33174) (svn r51632)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51644 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (9.0.0-4) unstable; urgency=low
+
+  * Merge from UCS 3.2-2 (Bug #33174) (svn r51632)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 09 Jul 2014 11:38:54 +0200
+
 univention-quota (9.0.0-3) unstable; urgency=low
 
   * Merge from UCS 3.2-2 (Bug #31277) (svn 51439) 
