ucs 4.0-0 merge: proof_uniqueMembers: also remove empty uniqueMember attributes (Bug #33030)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51651 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,9 +1,16 @@
+univention-directory-manager-modules (10.0.5-1) unstable; urgency=low
+
+  * proof_uniqueMembers: also remove empty uniqueMember attributes
+  (Bug #33030)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 09 Jul 2014 12:05:01 +0200
+
 univention-directory-manager-modules (10.0.4-1) unstable; urgency=low
 
   * proof_uniqueMembers: do not crash on empty uniqueMember attribute
   (Bug #33030)
 
- -- Lukas Walter <walter@univention.de>  Thu, 03 Jul 2014 15:29:08 +0200
+ -- Lukas Walter <walter@univention.de>  Tue, 08 Jul 2014 15:29:08 +0200
 
 univention-directory-manager-modules (10.0.3-1) unstable; urgency=low
 
