--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-54) unstable; urgency=low
+
+  * Disable quota test until UCS-3.2-3 (Bug #34625)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 09 Jul 2014 12:14:59 +0200
+
 ucs-test (4.0.166-53) unstable; urgency=low
 
   * udm.py#stop_cli_server(): really catch IOError (Bug #35220)
