* Bug #34093: fix displaying of new object dialogue in specific circumstances
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51660 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-29) unstable; urgency=low
+
+  * Bug #34093: fix displaying of new object dialogue in specific
+  	circumstances
+
+ -- Florian Best <best@univention.de>  Wed, 09 Jul 2014 14:27:12 +0200
+
 univention-management-console-module-udm (4.0.97-28) unstable; urgency=medium
 
   * Bug #34246: reverted commit r50381
