proof_uniqueMembers: simplified last change (Bug #33030)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51667 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.6-1) unstable; urgency=low
+
+  * proof_uniqueMembers: simplified last change (Bug #33030)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 09 Jul 2014 16:14:09 +0200
+
 univention-directory-manager-modules (10.0.5-1) unstable; urgency=low
 
   * proof_uniqueMembers: also remove empty uniqueMember attributes
