--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-30) unstable; urgency=low
+
+  * Bug #34244: display a human readable error message when the LDAP-Server
+  	cannot be contacted.
+
+ -- Florian Best <best@univention.de>  Thu, 10 Jul 2014 09:33:34 +0200
+
 univention-management-console-module-udm (4.0.97-29) unstable; urgency=low
 
   * Bug #34093: fix displaying of new object dialogue in specific
