* Bug #34244: Add translation of the error message.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51675 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-31) unstable; urgency=low
+
+  * Bug #34244: Add translation of the error message.
+
+ -- Florian Best <best@univention.de>  Thu, 10 Jul 2014 09:46:31 +0200
+
 univention-management-console-module-udm (4.0.97-30) unstable; urgency=low
 
   * Bug #34244: display a human readable error message when the LDAP-Server
