Bug #34624 test: Disable re-join
Disable re-join because it is a major change for all subsequent tests.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51690 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-55) unstable; urgency=low
+
+  * Disable re-join (Bug #34624)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 10 Jul 2014 09:57:45 +0200
+
 ucs-test (4.0.166-54) unstable; urgency=low
 
   * Disable quota test until UCS-3.2-3 (Bug #34625)
