--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-17) unstable; urgency=low
+
+  * Bug #34243: enhance error handling to display user friendly error messages
+
+ -- Florian Best <best@univention.de>  Thu, 10 Jul 2014 12:01:59 +0200
+
 univention-management-console (6.0.24-16) unstable; urgency=low
 
   * Bug #34244: enhance error handling to display user friendly error messages
